test/inference/good/coreml_monomorphic_let.mle
let ['a] (id : 'a -> 'a) = ['a] fun (x : 'a) -> x[]
let (id2 : int -> int) = id[int -> int] id[int]
let (main : int) = id2[] 0